modificando el codigo para usar con google

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La clave API de OpenAI existe y empieza por sk-proj-\n"
+      "La clave API de Google existe y empieza por AIzaSyCj\n"
      ]
     }
    ],
@@ -129,30 +129,29 @@
     "# Comprobamos las claves\n",
     "\n",
     "import os\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
-    "if openai_api_key:\n",
-    "    print(f\"La clave API de OpenAI existe y empieza por {openai_api_key[:8]}\")\n",
+    "if google_api_key:\n",
+    "    print(f\"La clave API de Google existe y empieza por {google_api_key[:8]}\")\n",
     "else:\n",
-    "    print(\"La clave API de OpenAI no existe - Dirígete a la guía de solución de problemas en la carpeta de configuración.\")\n",
+    "    print(\"La clave API de Google no existe - Dirígete a la guía de solución de problemas en la carpeta de configuración.\")\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Y ahora, la importante declaración de importación\n",
     "# Si recibes un error de importación, consulta la guía de solución de problemas\n",
-    "\n",
-    "from openai import OpenAI"
+    "from google import genai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,30 +159,34 @@
     "# Si no estás seguro de lo que significa crear una instancia de una clase, ¡visita la carpeta de guías!\n",
     "# Si recibes un error de nombre, visita la carpeta de guías para obtener más información sobre los errores de nombre.\n",
     "\n",
-    "openai = OpenAI()"
+    "gemini = genai.Client(api_key=google_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crea una lista de mensajes en el formato familiar de OpenAI\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"¿Cuanto es 2+2?\"}]"
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"parts\": [{\"text\": \"¿Cuanto es 2+2?\"}]\n",
+    "    }]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 + 2 es igual a 4.\n"
+      "2+2 es igual a **4**.\n"
      ]
     }
    ],
@@ -191,12 +194,12 @@
     "# ¡Y ahora, a llamarlo! Si tienes algún problema, consulta la guía de solución de problemas.\n",
     "# Usa GPT 4.1 nano, el modelo increíblemente económico.\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
-    "    messages=messages\n",
+    "response = gemini.models.generate_content(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    contents=messages\n",
     ")\n",
     "\n",
-    "print(response.choices[0].message.content)\n"
+    "print(response.text)\n"
    ]
   },
   {
@@ -431,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
