--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,20 +173,25 @@
     "messages = [\n",
     "    {\n",
     "        \"role\": \"user\",\n",
-    "        \"parts\": [{\"text\": \"¿Cuanto es 2+2?\"}]\n",
+    "        \"parts\": [{\"text\": \"¿Cuanto es 5*5+1?\"}]\n",
     "    }]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2+2 es igual a **4**.\n"
+      "Para resolver $5*5+1$, seguimos el orden de las operaciones (primero multiplicación, luego suma):\n",
+      "\n",
+      "1. **Multiplicación:** $5 * 5 = 25$\n",
+      "2. **Suma:** $25 + 1 = 26$\n",
+      "\n",
+      "Así que, **$5*5+1 = 26$**.\n"
      ]
     }
    ],
@@ -204,146 +209,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Y ahora, vamos a llamar a la API de OpenAI\n",
     "\n",
     "question = \"Proponga una pregunta difícil y desafiante para evaluar el coeficiente intelectual de alguien. Responde únicamente con la pregunta.\"\n",
-    "messages = [{\"role\": \"user\", \"content\": question}]\n"
+    "messages = [{\"role\": \"user\", \"parts\": [{\"text\": question}]}]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Si cinco máquinas pueden fabricar cinco artículos en cinco minutos, ¿cuánto tiempo tardarán cien máquinas en fabricar cien artículos?\n"
+      "Dada la secuencia: 1, 11, 21, 1211, 111221, ... ¿Cuál es el siguiente término?\n"
      ]
     }
    ],
    "source": [
     "# Pregúntale: usa GPT 4.1 mini, aún barato pero más potente que nano\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages\n",
+    "response = gemini.models.generate_content(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    contents=messages\n",
     ")\n",
     "\n",
-    "question = response.choices[0].message.content\n",
+    "question = response.text\n",
     "\n",
     "print(question)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# una nueva lista de mensajes\n",
-    "messages = [{\"role\": \"user\", \"content\": question}]\n"
+    "messages = [{\"role\": \"user\", \"parts\": [{\"text\": question}]}]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vamos a analizar el problema paso a paso.\n",
+      "Esta es una secuencia \"Look and Say\" (Mira y di). Cada término se genera describiendo el término anterior.\n",
       "\n",
-      "**Datos del problema:**\n",
-      "- 5 máquinas fabrican 5 artículos en 5 minutos.\n",
+      "Vamos a ver cómo se forma:\n",
       "\n",
-      "Queremos saber: **¿Cuánto tiempo tardarán 100 máquinas en fabricar 100 artículos?**\n",
+      "1.  **1**\n",
+      "    *   (Hay \"un 1\")\n",
+      "2.  **11**\n",
+      "    *   (Hay \"dos 1s\")\n",
+      "3.  **21**\n",
+      "    *   (Hay \"un 2\" y \"un 1\")\n",
+      "4.  **1211**\n",
+      "    *   (Hay \"un 1\", \"un 2\" y \"dos 1s\")\n",
+      "5.  **111221**\n",
       "\n",
-      "---\n",
+      "Ahora, para encontrar el siguiente término, debemos describir el último término: **111221**\n",
       "\n",
-      "### Paso 1: Encontrar la tasa de trabajo por máquina\n",
+      "*   Los primeros tres dígitos son `111` -> \"tres 1s\" (se escribe **31**)\n",
+      "*   Los siguientes dos dígitos son `22` -> \"dos 2s\" (se escribe **22**)\n",
+      "*   El último dígito es `1` -> \"un 1\" (se escribe **11**)\n",
       "\n",
-      "Si 5 máquinas fabrican 5 artículos en 5 minutos, entonces:\n",
+      "Juntando todo: **312211**\n",
       "\n",
-      "- En 5 minutos: 5 máquinas → 5 artículos\n",
-      "- Por máquina: 1 máquina en 5 minutos → 1 artículo\n",
-      "\n",
-      "Esto indica que **cada máquina fabrica 1 artículo en 5 minutos**.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "### Paso 2: Calcular el tiempo para 100 máquinas fabricando 100 artículos\n",
-      "\n",
-      "Dado que cada máquina produce 1 artículo en 5 minutos:\n",
-      "\n",
-      "- 100 máquinas trabajando al mismo tiempo fabricarán 100 artículos en **5 minutos**.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "### **Respuesta:**\n",
-      "\n",
-      "Las 100 máquinas tardarán **5 minutos** en fabricar 100 artículos.\n"
+      "El siguiente término en la secuencia es **312211**.\n"
      ]
     }
    ],
    "source": [
     "# Hacemos una nueva pregunta\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages\n",
+    "response = gemini.models.generate_content(\n",
+    "    model=\"gemini-2.5-flash\",\n",
+    "    contents=messages\n",
     ")\n",
     "\n",
-    "answer = response.choices[0].message.content\n",
+    "answer = response.text\n",
     "print(answer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Vamos a analizar el problema paso a paso.\n",
+       "Esta es una secuencia \"Look and Say\" (Mira y di). Cada término se genera describiendo el término anterior.\n",
        "\n",
-       "**Datos del problema:**\n",
-       "- 5 máquinas fabrican 5 artículos en 5 minutos.\n",
+       "Vamos a ver cómo se forma:\n",
        "\n",
-       "Queremos saber: **¿Cuánto tiempo tardarán 100 máquinas en fabricar 100 artículos?**\n",
+       "1.  **1**\n",
+       "    *   (Hay \"un 1\")\n",
+       "2.  **11**\n",
+       "    *   (Hay \"dos 1s\")\n",
+       "3.  **21**\n",
+       "    *   (Hay \"un 2\" y \"un 1\")\n",
+       "4.  **1211**\n",
+       "    *   (Hay \"un 1\", \"un 2\" y \"dos 1s\")\n",
+       "5.  **111221**\n",
        "\n",
-       "---\n",
+       "Ahora, para encontrar el siguiente término, debemos describir el último término: **111221**\n",
        "\n",
-       "### Paso 1: Encontrar la tasa de trabajo por máquina\n",
+       "*   Los primeros tres dígitos son `111` -> \"tres 1s\" (se escribe **31**)\n",
+       "*   Los siguientes dos dígitos son `22` -> \"dos 2s\" (se escribe **22**)\n",
+       "*   El último dígito es `1` -> \"un 1\" (se escribe **11**)\n",
        "\n",
-       "Si 5 máquinas fabrican 5 artículos en 5 minutos, entonces:\n",
+       "Juntando todo: **312211**\n",
        "\n",
-       "- En 5 minutos: 5 máquinas → 5 artículos\n",
-       "- Por máquina: 1 máquina en 5 minutos → 1 artículo\n",
-       "\n",
-       "Esto indica que **cada máquina fabrica 1 artículo en 5 minutos**.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### Paso 2: Calcular el tiempo para 100 máquinas fabricando 100 artículos\n",
-       "\n",
-       "Dado que cada máquina produce 1 artículo en 5 minutos:\n",
-       "\n",
-       "- 100 máquinas trabajando al mismo tiempo fabricarán 100 artículos en **5 minutos**.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### **Respuesta:**\n",
-       "\n",
-       "Las 100 máquinas tardarán **5 minutos** en fabricar 100 artículos."
+       "El siguiente término en la secuencia es **312211**."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
